# taiko-ai

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  ai_learning.md  audit.md  complete_audit2.md  complete_audit3.md  everything_about_taiko.md  how_to_deploy.md  package-lock.json  package.json  plan.md  repo_learning.md  subagent_research.md  verification.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  format.yml
agents/: shadow-developer.md  shadow.md  taiko-developer.md  taiko-hoodi-developer.md  taiko-mainnet-developer.md  taiko-node-runner.md  taiko-shadow.md  taiko-x402.md
cli/: USER_GUIDE.md  package.json
cli/src/: index.ts
cli/tests/: config.test.ts  output.test.ts
mcp-servers/taiko-bridge/: package.json  tsconfig.json
mcp-servers/taiko-data/: .gitignore  package.json  wrangler.toml
mcp-servers/taiko-explorer/: package.json
mcp-servers/taiko-node-monitor/: .gitignore  pyproject.toml
mcp-servers/taiko-node-monitor/taiko_node_monitor/: __init__.py  docker_ops.py  preconf.py  rpc.py  server.py
mcp-servers/taiko-node-monitor/tests/: test_docker_ops.py  test_preconf.py  test_rpc.py  test_server.py
plans/: shared-library.md  taiko-bridge-mcp.md  taiko-cli.md  taiko-data-mcp.md  taiko-explorer-mcp.md  taiko-node-monitor-mcp.md
skills/: CLAUDE.md
skills/hoodi/: SKILL.md
skills/mainnet/: SKILL.md
skills/private-eth-transactor/: SKILL.md
skills/shadow/: SKILL.md
skills/shared/: anchor-contract.md  bridge-interface.md  cross-chain-patterns.md  evm-compatibility.md  foundry-guide.md  (+2 more)
(+109 files in other folders)
