[project]
name = "taiko-node-monitor"
version = "0.1.0"
description = "MCP server to monitor and manage a local Taiko node (simple-taiko-node)"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0,<3.0",
  "docker>=7.0",
  "httpx>=0.27",
]

[project.scripts]
taiko-node-monitor = "taiko_node_monitor.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["taiko_node_monitor"]
